[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["albert4smartaos <albert.manyoses@smartaos.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.73.0"}
databases = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
